After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728934 - at-spi2-registryd: The name org.gnome.SessionManager was not provided by any .service files
at-spi2-registryd: The name org.gnome.SessionManager was not provided by any ...
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-core
unspecified
Other Linux
: Normal major
: ---
Assigned To: At-spi maintainer(s)
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-04-25 08:11 UTC by David Liang
Modified: 2014-06-07 19:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
register to session manager when it is running (1.51 KB, patch)
2014-04-25 08:11 UTC, David Liang
committed Details | Review
check whether the session was running (1.58 KB, patch)
2014-04-28 03:13 UTC, David Liang
none Details | Review
remove the warning message (1.21 KB, patch)
2014-04-28 06:57 UTC, David Liang
none Details | Review
updated (1.48 KB, patch)
2014-05-30 10:21 UTC, David Liang
committed Details | Review

Description David Liang 2014-04-25 08:11:29 UTC
Created attachment 275112 [details] [review]
register to session manager when it is running

at-spi2-registryd failed to register at startup.
It is a race-condition issue. Gnome session manager start but is not running full.

The warning message displays in /var/log/message.


https://bugzilla.novell.com/show_bug.cgi?id=873541
Comment 1 Mike Gorse 2014-04-27 20:14:25 UTC
Comment on attachment 275112 [details] [review]
register to session manager when it is running

Thanks for the patch. I wonder whether it is ever possible for at-spi2-registryd to start after the SessionRunning signal is sent out, in which case we wouldn't end up registering, but I didn't notice that happening when briefly testing, so your patch seems like an improvement over the current behavior. Committed to master with minor modification as e05258.
Comment 2 David Liang 2014-04-28 03:13:53 UTC
Created attachment 275295 [details] [review]
check whether the session was running

Thanks!
I add a new patch to check if the session was already running.
Tested in my system.
Comment 3 David Liang 2014-04-28 06:57:39 UTC
Created attachment 275296 [details] [review]
remove the warning message

When gnome-session was not start fully, it is even not be able to get the 'IsSessionRunning' status.
Change the patch by removing the 'error check' part.
Comment 4 David Liang 2014-05-30 10:21:34 UTC
Created attachment 277528 [details] [review]
updated 

register only once. As if the session turn back from QueryEndSession, the SessionRunning will emit again.
Comment 5 Mike Gorse 2014-06-07 19:17:24 UTC
Comment on attachment 277528 [details] [review]
updated 

Looks fine. Committed to master as 09854f. Thanks.