registryd: Wait for session manager to start before registering with it

We have a race where at-spi2-registryd tries to register with the session
manager before it has fully initialized. Let's wait for a SessionRunning
signal before initializing.

https://bugzilla.gnome.org/show_bug.cgi?id=728934